# EV3-Agrobotics

./: .gitignore  README.md  main.py  pathfinding.py  pyproject.toml  sanity_check.py  scripter.py
Agrobotics/: challenges.csv  config.json  obstacles.txt  scripter.py
Agrobotics/challenges/: Documentation.md  README.md  __init__.py  config.json
Agrobotics/challenges/instructions/: DockingStation.txt  Documentation.md  FarmModule.txt  TestSoil_GREEN.txt
Agrobotics/pathfinding/: PATHFINDING.md  __init__.py  config.json  directional_movement.py  objects.py  pathfinder.py  pathfinding.py
Agrobotics/pathfinding/archive/: challenges.csv  directional_movement.py  objects.py  pathfinding.py
Agrobotics/pathfinding/paths/: DockingStation.txt  FarmModule.txt  GrowingMedium 2.txt  GrowingMedium1.txt  GrowingMedium_BLUE.txt  SeedlingContainer1.txt  SeedlingContainer3.txt  SeedlingContainer4.txt  SeedlingContainer_BLUE.txt  SeedlingContainer_GREEN.txt  SeedlingContainer_RED.txt  SeedlingContainer_YELLOW.txt  example.txt
Agrobotics/pathfinding/paths/testing/: example.txt  vectors.txt
Agrobotics/testing/: pathfinding_tests.py
Agrobotics/visuals/: pathdraw.py
Completed Challenges/: DockingStation.py  FarmModule.py  SeedlingContainer_BLUE.py
challenges/: Challenge_1.py  __init__.py
pathfinding/: grid.py  main.py
qof/: __init__.py
